--- a/manager/manager-service/pom.xml
+++ b/manager/manager-service/pom.xml
@@ -7,6 +7,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>manager-service</artifactId>
+	<packaging>war</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>cn.e3Item</groupId>
