--- a/manager/manager-service/pom.xml
+++ b/manager/manager-service/pom.xml
@@ -6,22 +6,10 @@
 		<artifactId>manager</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>manager-service</artifactId>
 	<packaging>war</packaging>
+	<artifactId>manager-service</artifactId>
 	<dependencies>
-		<dependency>
-			<groupId>cn.e3Item</groupId>
-			<artifactId>manager-dao</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>cn.e3Item</groupId>
-			<artifactId>manager-interface</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
-		<!-- spring的依赖 -->
-		<!-- start Spring -->
+		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -50,8 +38,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
-		<!-- end Spring -->
-		<!-- start dubbo相关 -->
+		<!-- dubbo相关 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo</artifactId>
@@ -74,4 +61,17 @@
 			<groupId>com.github.sgroschupf</groupId>
 			<artifactId>zkclient</artifactId>
 		</dependency>
-		<!-- dubbo相关 end -- > </dependencies> </project> 
+
+		<!-- 导入依赖模块 -->
+		<dependency>
+			<groupId>cn.e3Item</groupId>
+			<artifactId>manager-dao</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>cn.e3Item</groupId>
+			<artifactId>manager-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+</project>
