--- a/manager-web/pom.xml
+++ b/manager-web/pom.xml
@@ -88,6 +88,11 @@
 			<artifactId>manager-interface</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>cn.e3Item</groupId>
+			<artifactId>common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
